--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -11,6 +11,8 @@
     <!--
         로그인 시 : 내 정보 확인, 대출내역, 반납내역
         로그아웃 시 : 로그인, 회원가입
+
+        무관 : 도서 목록
     -->
     <ul>
         <li><a href="loginForm.html" th:href="@{/users/login}">로그인</a></li>
@@ -18,6 +20,8 @@
         <li><a href="user.html" th:href="@{/users/userA}">내 정보 확인</a></li> <!-- 세션 정보 유지 어떻게? -->
         <li><a href="borrowList.html" th:href="@{/users/userA/borrow}">대출내역</a></li>
         <li><a href="returnList.html" th:href="@{/users/userA/return}">반납내역</a></li>
+
+        <li><a href="../book/bookList.html" th:href="@{/books}">도서 목록</a></li>
     </ul>
 </body>
 </html>
