--- a/src/main/resources/templates/admin/borrowForm.html
+++ b/src/main/resources/templates/admin/borrowForm.html
@@ -12,6 +12,8 @@
         <input type="text" id="userId" name="userId"><br>
         <label for="bookId">도서 번호</label>
         <input type="number" id="bookId" name="bookId"><br>
+        <label for="adminId">관리자 아이디</label>
+        <input type="text" id="adminId" name="adminId"><br>
         <br>
         <button type="submit">대출 처리</button>
         <button type="button" onclick="location.href='home.html'" th:onclick="|location.href='@{/security}'|">취소</button>
