--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -12,6 +12,7 @@
         <li><a href="returnForm.html" th:href="@{/security/return}">반납</a></li>
         <li><a href="userList.html" th:href="@{/security/users}">이용자 목록</a></li>
         <li><a href="../book/bookList.html" th:href="@{/books}">도서 목록</a></li>
+        <li><a href="addBookForm.html" th:href="@{/books/add}">도서 등록</a></li>
     </ul>
 </body>
 </html>
