--- a/src/main/resources/templates/admin/returnForm.html
+++ b/src/main/resources/templates/admin/returnForm.html
@@ -10,6 +10,8 @@
     <form action="home.html" th:action method="post">
         <label for="bookId">도서 번호</label>
         <input type="number" id="bookId" name="bookId"><br>
+        <label for="adminId">관리자 아이디</label>
+        <input type="text" id="adminId" name="adminId"><br>
         <br>
         <button type="submit">반납 처리</button>
         <button type="button" onclick="location.href='home.html'" th:onclick="|location.href='@{/security}'|">취소</button>
