--- a/src/main/resources/templates/user/returnList.html
+++ b/src/main/resources/templates/user/returnList.html
@@ -17,37 +17,21 @@
             <td>출판사</td>
             <td>발행년</td>
             <td>반납일</td>
+            <td>반납시간</td>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>12345</td>
-            <td>100.김</td>
-            <td>spring boot</td>
-            <td>Ethan</td>
-            <td>인프런</td>
-            <td>2022</td>
-            <td>2022.01.01</td>
-        </tr>
-
-        <tr>
-            <td>12345</td>
-            <td>100.김c2</td>
-            <td>spring boot</td>
-            <td>Ethan</td>
-            <td>인프런</td>
-            <td>2021</td>
-            <td>2022.01.05</td>
-        </tr>
-
-        <tr>
-            <td>12345</td>
-            <td>100.김c3</td>
-            <td>spring boot</td>
-            <td>Ethan</td>
-            <td>인프런</td>
-            <td>2020</td>
-            <td>2022.02.01</td>
+        <tr th:each="returnObj : ${returnList}">
+            <td th:text="${returnObj.bookId}">12345</td>
+            <th:block th:object="${returnObj.book.bookKind}">
+                <td th:text="*{bookSymbol}">100.김</td>
+                <td th:text="*{bookName}">spring boot</td>
+                <td th:text="*{bookAuthor}">Ethan</td>
+                <td th:text="*{bookPublisher}">인프런</td>
+                <td th:text="*{bookPubYear}">2022</td>
+            </th:block>
+            <td th:text="${returnObj.returnDay}">2022.01.01</td>
+            <td th:text="${returnObj.returnTime}">21:10</td>
         </tr>
         </tbody>
     </table>
