--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -8,23 +8,23 @@
     <h2><a href="home.html" th:href="@{/users}">Home</a></h2>
     <div>
         <label for="userId">아이디</label>
-        <input type="text" id="userId" value="userA" readonly> <!-- th:value="" -->
+        <input type="text" id="userId" value="userA" th:value="${user.userId}" readonly> <!-- th:value="" -->
     </div>
     <div>
         <label for="userName">이름</label>
-        <input type="text" id="userName" value="userName" readonly>
+        <input type="text" id="userName" value="userName" th:value="${user.userName}" readonly>
     </div>
     <div>
         <label for="userTel">전화번호</label>
-        <input type="tel" id="userTel" value="010-1234-5678" readonly>
+        <input type="tel" id="userTel" value="010-1234-5678" th:value="${user.userTel}" readonly>
     </div>
     <div>
         <label for="userPosBookNum">대출 가능 권수</label>
-        <input type="number" id="userPosBookNum" value="3" readonly>권
+        <input type="number" id="userPosBookNum" value="3" readonly>권 <!-- 쿼리해서 넘겨줌 -->
     </div>
     <div>
         <label for="userImposDur">대출 불가 기간</label>
-        <input type="number" id="userImposDur" value="1" readonly>일
+        <input type="number" id="userImposDur" value="1" th:value="${user.suspenTerm}" readonly>일
     </div>
     <br>
     <button type="button" onclick="location.href='editForm.html'" th:onclick="|location.href='@{/users/userA/edit}'|">수정</button>
