--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -20,11 +20,11 @@
     </div>
     <div>
         <label for="userPosBookNum">대출 가능 권수</label>
-        <input type="number" id="userPosBookNum" value="3" readonly>권 <!-- 쿼리해서 넘겨줌 -->
+        <input type="number" id="userPosBookNum" value="3" th:value="${5 - user.borrows.size()}" readonly>권 <!-- 쿼리해서 넘겨줌 -->
     </div>
     <div>
         <label for="userImposDur">대출 불가 기간</label>
-        <input type="number" id="userImposDur" value="1" th:value="${user.suspenTerm}" readonly>일
+        <input type="number" id="userImposDur" value="1" th:value="${user.suspendedTerm}" readonly>일
     </div>
     <br>
     <button type="button" onclick="location.href='editForm.html'" th:onclick="|location.href='@{/users/userA/edit}'|">수정</button>
