--- a/src/main/resources/templates/user/joinForm.html
+++ b/src/main/resources/templates/user/joinForm.html
@@ -8,8 +8,8 @@
     <form action="home.html" th:action method="post">
         <label for="userId">아이디</label>
         <input type="text" id="userId" name="userId" required><br>
-        <label for="userLongPwd">비밀번호</label>
-        <input type="text" id="userLongPwd" name="userLongPwd" required><br>
+        <label for="userPwd">비밀번호</label>
+        <input type="text" id="userPwd" name="userPwd" required><br>
         <label for="userShortPwd">대출용 비밀번호</label>
         <input type="text" id="userShortPwd" name="userShortPwd" required><br>
         <label for="userName">이름</label>
