--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -11,8 +11,8 @@
     <form action="home.html" th:action method="post">
         <label for="userId">아이디</label>
         <input type="text" id="userId" name="userId"><br>
-        <label for="userLongPwd">비밀번호</label>
-        <input type="text" id="userLongPwd" name="userLongPwd">
+        <label for="userPwd">비밀번호</label>
+        <input type="text" id="userPwd" name="userPwd">
         <br>
         <button type="submit">로그인</button>
         <button type="button" onclick="location.href='home.html'" th:onclick="|location.href='@{/users}'|">취소</button>
